--- a/index.ipynb
+++ b/index.ipynb
@@ -88,11 +88,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# define function here"
+    "# define function here\n",
+    "def next_up():\n",
+    "    return list_of_destinations[0]"
    ]
   },
   {
