--- a/index.ipynb
+++ b/index.ipynb
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,8 +110,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "list_of_destinations = ['argentina', 'canada', 'croatia']\n",
-    "# next_up() # 'argentina'"
+    "list_of_destinations = ['argentina', 'canada', 'croatia']next_up() # 'argentina'"
    ]
   },
   {
