--- a/index.ipynb
+++ b/index.ipynb
@@ -106,11 +106,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'argentina'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "list_of_destinations = ['argentina', 'canada', 'croatia']next_up() # 'argentina'"
+    "list_of_destinations = ['argentina', 'canada', 'croatia']\n",
+    "next_up() # 'argentina'"
    ]
   },
   {
