--- a/index.ipynb
+++ b/index.ipynb
@@ -134,11 +134,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# define function here"
+    "# define function here\n",
+    "def favorite_destination():\n",
+    "    return \"madagascar\""
    ]
   },
   {
