Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -179,11 +179,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# define function here"
+    "# define function here\n",
+    "def add_favorite_destination():\n",
+    "    favorite_destinations.append(favorite_destination())\n",
+    "    return favorite_destination()"
    ]
   },
   {
@@ -195,30 +198,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia', 'madagascar']\n"
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-10-c3eb7e724793>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-10-c3eb7e724793>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    favorite_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia'] add_favorite_destination()\u001b[0m\n\u001b[0m                                                                                                                    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'madagascar'"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "favorite_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
-    "# add_favorite_destination()\n",
+    "favorite_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia'] add_favorite_destination()\n",
     "favorite_destinations[-1] # 'madagascar'"
    ]
   },
