Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -211,7 +211,8 @@
     }
    ],
    "source": [
-    "favorite_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia'] add_favorite_destination()\n",
+    "favorite_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
+    "add_favorite_destination()\n",
     "favorite_destinations[-1] # 'madagascar'"
    ]
   },
